Consolidated some files, added usage comments

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Infrastructure_migration_solution_overview.adoc
+// Module included in the following assemblies:
+// assembly_Infrastructure_migration_solution_overview.adoc
 [id="Vmware_to_rhv_workflow"]
 = VMware to Red Hat Virtualization migration workflow
 
