--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Authenticating_rhv_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Authenticating_rhv_conversion_hosts_in_cloudforms.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Conversion_hosts.adoc
+// Module included in the following assemblies:
+// assembly_Creating_and_configuring_the_conversion_hosts.adoc
 [id="Authenticating_rhv_conversion_hosts_in_cloudforms"]
 = Authenticating the Red Hat Virtualization conversion hosts in CloudForms
 
