--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
@@ -1,4 +1,5 @@
-// Used in module: con_Conversion_host_prerequisites.adoc
+// Module included in the following assemblies:
+// con_Conversion_host_prerequisites.adoc
 [id="Changing_the_maximum_number_of_concurrent_migrations"]
 .(Optional) Changing the maximum number of concurrent migrations
 
