--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_rhel_premigration_playbook.adoc
@@ -1,4 +1,5 @@
-// Used in module: proc_Premigration_tasks.adoc
+// Module included in the following assemblies:
+// proc_Performing_premigration_tasks.adoc
 [id="Configuring_the_rhel_premigration_playbook"]
 = Creating a `RHEL premigration` playbook for migrating RHEL virtual machines
 
