--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
@@ -1,3 +1,5 @@
+// Module included in the following assemblies:
+// assembly_Creating_and_running_a_migration_plan.adoc
 [id="Creating_a_migration_plan"]
 == Creating a migration plan
 
