--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Migration.adoc
+// Module included in the following assemblies:
+// assembly_Migrating_the_infrastructure.adoc
 [id="Creating_an_Infrastructure_Mapping"]
 = Creating an infrastructure mapping
 
