--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_osp_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_osp_conversion_hosts.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Conversion_hosts.adoc
+// Module included in the following assemblies:
+// assembly_Creating_and_configuring_the_conversion_hosts.adoc
 [id="Creating_conversion_hosts"]
 = Creating the OpenStack Platform conversion hosts
 [id="Creating_OSP_conversion_hosts"]
@@ -22,12 +23,16 @@ The conversion appliance for OpenStack Platform 14 may be used with OpenStack Pl
 
 . Upload the appliance to Glance storage.
 . Deploy the appliance as a conversion host instance, with the following resources:
-
 * 4 vCPUs
 * 8 GB RAM
 * `/tmp` (1 GB for each conversion)
 * `/var/tmp` (1 GB for each conversion)
 * `/var/logs` (5 GB)
++
+[NOTE]
+====
+For best performance, deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. Nested virtualization is a technology preview.
+====
 
 . Add the SSH key for `cloud-user` in CloudForms:
 
