--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Performing_premigration_tasks.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Performing_premigration_tasks.adoc
@@ -1,8 +1,9 @@
-// Used in module: assembly_Creating_and_running_a_migration_plan.adoc
-[id="Premigration_tasks"]
-= Premigration tasks
+// Module included in the following assemblies:
+// assembly_Creating_and_running_a_migration_plan.adoc
+[id="Performing_premigration_tasks"]
+= Performing premigration tasks
 
-Ensure that the following premigration tasks are performed if they are relevant to your migration:
+Perform the following premigration tasks if they are relevant to your migration:
 
 * xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[Creating a CSV file to add virtual machines to the migration plan]
 +
@@ -19,7 +20,5 @@ If you are using Ansible to automate pre- and post-migration tasks, set up an An
 If you are migrating RHEL or other Linux virtual machines, set up an xref:Setting_up_an_ansible_environment[Ansible environment], and create a RHEL premigration playbook. You will add the RHEL premigration playbook to the migration plan.
 
 include::proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc[leveloffset=+1]
-
 include::proc_Setting_up_an_ansible_environment.adoc[leveloffset=+1]
-
 include::proc_Configuring_the_rhel_premigration_playbook.adoc[leveloffset=+1]
