--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -41,12 +41,7 @@ Outbound traffic is enabled by default. If you have changed this setting, enable
 +
 [NOTE]
 ====
-Do not remove or change a provider before, during, or after migration because it will have negative effects on CloudForms.
+Do not remove or change a provider before, during, or after migration because it will have negative effects on the CloudForms migration objects.
 ====
 
-. Configure the xref:Conversion_hosts[conversion hosts].
-+
-[NOTE]
-====
-For best performance, deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. This is a technology preview.
-====
+You are ready to xref:Creating_and_configuring_the_conversion_hosts[create and configure the conversion hosts].
