--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -37,7 +37,7 @@ IMS only supports shared storage such as NFS, iSCSI, or FCP. Local storage is no
 +
 [NOTE]
 ====
-Do not remove or change a provider before, during, or after migration because it will have negative effects on CloudForms.
+Do not remove or change a provider before, during, or after migration because it will have negative effects on the CloudForms migration objects.
 ====
 
-. Configure the xref:Conversion_hosts[conversion hosts] on physical machines, not nested virtual machines.
+You are ready to xref:Creating_and_configuring_the_conversion_hosts[create and configure the conversion hosts].
