--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Setting_up_an_ansible_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Setting_up_an_ansible_environment.adoc
@@ -1,3 +1,5 @@
+// Module included in the following assemblies:
+// proc_Performing_premigration_tasks.adoc
 [id="Setting_up_an_ansible_environment"]
 = Setting up an Ansible environment
 
