--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Validating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Validating_a_migration_plan.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Creating_and_running_a_migration_plan.adoc
+// Module included in the following assemblies:
+// assembly_Creating_and_running_a_migration_plan.adoc
 [id="Validating_a_migration_plan"]
 = Validating a migration plan
 
