--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Verifying_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Verifying_conversion_hosts.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Conversion_hosts.adoc
+// Module included in the following assemblies:
+// assembly_Creating_and_configuring_the_conversion_hosts.adoc
 [id='Verifying_conversion_hosts']
 = Validating the conversion hosts
 
