--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Infrastructure_mapping_errors.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Infrastructure_mapping_errors.adoc
@@ -1,3 +1,5 @@
+// Module included in the following assemblies:
+// assembly_Common_issues_and_mistakes.adoc
 [id="Infrastructure_mapping_errors"]
 = Infrastructure mapping errors
 
