--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Known_issues.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Known_issues.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Troubleshooting.adoc
+// Module included in the following assemblies:
+// assembly_Troubleshooting.adoc
 [id="Known_issues"]
 = Known Issues
 
