--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Planning.adoc
+// Module included in the following assemblies:
+// assembly_Planning_the_migration.adoc
 [id="Questions_to_ask_before_migration"]
 = Questions to ask before migration
 
@@ -32,7 +33,20 @@ What impact will the migration have on my users?::
 How long will the migration take?::
 * There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis.
 * It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
-+
-This xref:Migration_example[migration example] is provided as a guide.
 
-include::ref_Migration_example.adoc[leveloffset=+1]
+[id="Migration_example"]
+.Migration example
+
+This xref:Migration_example[migration example], which took 1 hour and 30 minutes to complete, is provided as a guide:
+
+* Infrastructure:
+
+** 10 virtual machines (100 GB RAM)
+** Virtual machine disks 2/3 full (total of 1 TB of data)
+
+* Hardware:
+
+** Strong host (40 cores, 500 GB RAM)
+** Fast SSD XtremIO storage
+** Fibre Channel 8 interface for host-to-storage connection
+** 10 GbE network interface cards for all other connections
