--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Infrastructure.adoc
+// Module included in the following assemblies:
+// assembly_Planning_the_migration.adoc
 [id="Recommendations_for_migration"]
 = Recommendations for migration
 
