--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Common_issues_and_mistakes.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Common_issues_and_mistakes.adoc
@@ -1,4 +1,5 @@
-// // Used in module: assembly_Troubleshooting.adoc
+// Module included in the following assemblies:
+// assembly_Troubleshooting.adoc
 [id="Common_issues_and_mistakes"]
 = Common issues and mistakes
 
