--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
@@ -1,4 +1,6 @@
-[id="Conversion_hosts"]
+// Module included in the following assemblies:
+// assembly_Preparing_the_environment_for_migration.adoc
+[id="Creating_and_configuring_the_conversion_hosts"]
 = Creating and configuring the conversion hosts
 
 The migration is performed by software installed on the conversion hosts. Creating and configuring the conversion hosts involves the following key steps:
@@ -11,9 +13,9 @@ The migration is performed by software installed on the conversion hosts. Creati
 
 You can xref:Upgrading_conversion_hosts[upgrade the conversion hosts] if you upgrade your target environment.
 
-include::modules/con_Conversion_host_prerequisites.adoc[leveloffset=+1]
-include::modules/proc_Creating_osp_conversion_hosts.adoc[leveloffset=+1]
-include::modules/proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
-include::modules/proc_Authenticating_rhv_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
-include::modules/proc_Verifying_conversion_hosts.adoc[leveloffset=+1]
-include::modules/proc_Upgrading_conversion_hosts.adoc[leveloffset=+1]
+include::con_Conversion_host_prerequisites.adoc[leveloffset=+1]
+include::proc_Creating_osp_conversion_hosts.adoc[leveloffset=+1]
+include::proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
+include::proc_Authenticating_rhv_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
+include::proc_Verifying_conversion_hosts.adoc[leveloffset=+1]
+include::proc_Upgrading_conversion_hosts.adoc[leveloffset=+1]
