--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_target_environment.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Preparation.adoc
+// Module included in the following assemblies:
+// assembly_Preparing_the_environment_for_migration.adoc
 [id="Preparing_the_target_environment"]
 = Preparing the target environment
 
