--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_prerequisites.adoc
@@ -1,4 +1,5 @@
-// Used in module: proc_Creating_conversion_hosts.adoc
+// Module included in the following assemblies:
+// assembly_Creating_and_configuring_the_conversion_hosts.adoc
 [id="Conversion_host_prerequisites"]
 = Conversion host prerequisites
 
