--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Preparation.adoc
+// Module included in the following assemblies:
+// assembly_Preparing_the_environment_for_migration.adoc
 [id="Preparing_the_vmware_source_environment"]
 = Preparing the VMware environment
 
