--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_a_failed_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_a_failed_migration_plan.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Troubleshooting.adoc
+// Module included in the following assemblies:
+// assembly_Troubleshooting.adoc
 [id="Retrying_a_failed_migration_plan"]
 = Retrying a failed migration plan
 
