--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Running_a_migration_plan.adoc
@@ -1,4 +1,5 @@
-// Used in module: assembly_Creating_and_running_a_migration_plan.adoc
+// Module included in the following assemblies:
+// assembly_Creating_and_running_a_migration_plan.adoc
 [id="Running_a_migration_plan"]
 = Running a migration plan
 
@@ -35,4 +36,15 @@ The migration plan is saved in *Migration Plans Not Started* and will not run un
 
 * To edit or delete a migration plan, click the *More Actions* icon.
 
-include::proc_Canceling_a_migration_plan.adoc[leveloffset=+1]
+[id="Canceling_a_migration_plan"]
+= Canceling a migration plan in progress
+
+You can cancel a migration plan that has started:
+
+. In menu:Compute[Migration > Migration Plans], click *Migration Plans in Progress*.
+. Select a migration plan and click *Cancel Migration*.
+. Click *Cancel Migrations* to confirm the cancellation. The canceled migration appears in *Migration Plans Complete* with a red `x` indicating that the plan did not complete successfully.
+
+You can click *Retry* to run the migration plan immediately or *Schedule* to run the migration plan in the future.
+
+Click the *More Actions* button to archive, edit, or delete the migration plan.
