--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_plan_errors.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_plan_errors.adoc
@@ -1,3 +1,5 @@
+// Module included in the following assemblies:
+// assembly_Common_issues_and_mistakes.adoc
 [id="Migration_plan_errors"]
 = Migration plan errors
 
