--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
@@ -1,3 +1,5 @@
+// Module included in the following assemblies:
+// assembly_Common_issues_and_mistakes.adoc
 [[Virtual_machine_migration_failure]]
 = Virtual machine migration failure
 
