--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
@@ -5,11 +5,18 @@
 
 The infrastructure migration involves the following key stages:
 
-. xref:Premigration_tasks[Performing premigration tasks], if necessary
-. xref:Creating_a_migration_plan[Creating the migration plan]
-. xref:Running_a_migration_plan[Running the migration plan] immediately or scheduling it to run in the future. Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan in progress].
+. Ensuring that the xref:Migration_plan_prerequisites[prerequisites] are met if your migration includes the following:
 
-include::proc_Performing_premigration_tasks.adoc[leveloffset=+1]
+* VMware virtual machines that have been migrated in the past
+* VMware virtual machines running RHEL or other Linux-based operating system
+* Ansible playbooks for automating tasks before or after migration
+
+. xref:Creating_a_migration_plan[Creating the migration plan]
+. xref:Running_a_migration_plan[Running the migration plan] immediately or scheduling it to run in the future.
++
+Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan in progress].
+
+include::con_Migration_plan_prerequisites.adoc[leveloffset=+1]
 include::proc_Creating_a_migration_plan.adoc[leveloffset=+1]
 include::proc_Running_a_migration_plan.adoc[leveloffset=+1]
 include::proc_Validating_a_migration_plan.adoc[leveloffset=+1]
