--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc
@@ -1,9 +1,11 @@
 // Module included in the following assemblies:
-// proc_Performing_premigration_tasks.adoc
+// con_Migration_plan_prerequisites.adoc
 [id="Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan"]
 = Creating a CSV file to add virtual machines to the migration plan
 
-If you are migrating a large number of virtual machines, you can create a CSV file to add the source virtual machines to the migration plan. If you are migrating virtual machines that were migrated in the past, you must use a CSV file.
+A CSV file is required if you are migrating virtual machines that were migrated in the past.
+
+If you are migrating a large number of virtual machines, you have the option of creating a CSV file to add the source virtual machines to the migration plan.
 
 The virtual machine `Name` is mandatory. `Provider`, `Host`, and `Cluster` are optional, to differentiate identical virtual machine names in different environments.
 
