--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Setting_up_an_ansible_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Setting_up_an_ansible_environment.adoc
@@ -1,17 +1,21 @@
 // Module included in the following assemblies:
-// proc_Performing_premigration_tasks.adoc
+// con_Migration_plan_prerequisites.adoc
 [id="Setting_up_an_ansible_environment"]
-= Setting up an Ansible environment
+= Setting up an Ansible environment for CloudForms
 
-You can perform automated tasks before and after a virtual machine is migrated, such as removing web servers from a load-balancing pool before migration and adding them back to the pool after migration.
+Create an Ansible environment that is accessible to CloudForms, with credentials and playbooks. A playbook is an Ansible service catalog item and is selected when you create the migration plan.
 
-Each task is an Ansible service catalog item, which you select in *Advanced Options* when you create the migration plan. You must create the Ansible service catalog item before creating the migration plan. The CloudForms inventory requires a minimum of one repository, one playbook, and one set of credentials.
+You can use Ansible playbooks to perform automated tasks, for example, removing web servers from a load-balancing pool before migration and adding them back to the pool after migration.
 
-To set up an Ansible environment and create a service catalog item:
+.Procedure
+
+The CloudForms inventory requires a minimum of one Ansible repository, one playbook, and one set of credentials.
+
+Create the following:
 
 [id="Creating_an_Ansible_service_catalog_item"]
-. Configure an link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-inside[Ansible repository] that is accessible to CloudForms.
+. link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-inside[Ansible repository] that is accessible to CloudForms
 
-. Create link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-credentials[Ansible credentials] for the virtual machines.
+. link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-credentials[Ansible credentials] for the virtual machines
 
-. Create an link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/provisioning_virtual_machines_and_hosts/#create-playbook-service-catalog-item[Ansible service catalog item].
+. link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/provisioning_virtual_machines_and_hosts/#create-playbook-service-catalog-item[Ansible service catalog item]
