--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_prerequisites.adoc
@@ -5,12 +5,11 @@
 
 The following prerequisites apply to certain migrations:
 
-* CSV file, to add previously migrated virtual machines to the migration plan. The migration plan cannot discover these virtual machines because their status is `migrated` in the CloudForms database. See xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[].
+* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file], if you are migrating previously migrated virtual machines. Previously migrated virtual machines are added to the migration plan with a CSV file. The migration plan cannot discover these virtual machines automatically because their status is `migrated` in the CloudForms database.
 
-* `RHEL premigration` playbook, for source virtual machines running RHEL or other Linux-based operating system. The playbook ensures that the IP addresses of these virtual machines are accessible after migration. See xref:Setting_up_an_ansible_environment[] and  xref:Creating_a_rhel_premigration_playbook[].
+* xref:Adding_ansible_playbooks_to_cloudforms[Ansible configuration in CloudForms], if you are using Ansible playbooks to automate tasks before or after migration
 
-* Ansible environment that can be accessed by CloudForms, if you are using playbooks to automate tasks before or after migration. See xref:Setting_up_an_ansible_environment[].
+* xref:Rhel_premigration_playbook[`RHEL premigration` playbook], if you are migrating virtual machines running RHEL or other Linux-based operating system, to ensure that their IP addresses are accessible after migration
 
 include::proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc[leveloffset=+1]
-include::proc_Setting_up_an_ansible_environment.adoc[leveloffset=+1]
-include::proc_Creating_a_rhel_premigration_playbook.adoc[leveloffset=+1]
+include::proc_Adding_ansible_playbooks_to_cloudforms.adoc[leveloffset=+1]
