--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
@@ -8,8 +8,6 @@ Create a migration plan with an infrastructure mapping, adding the source virtua
 [NOTE]
 ====
 For large migrations, it is faster to add the virtual machines with a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] than to select them individually.
-
-If your source virtual machines that have been migrated previously, a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] is mandatory.
 ====
 
 .Procedure
@@ -58,10 +56,9 @@ If a flavor is too small for the source virtual machine, it is marked with an as
 . Click *Next*.
 
 .<a|*Advanced Options*
-[id="Advanced_options_screen"]
-(Optional)
-.<a|. Select a premigration playbook service.
-. Select a postmigration playbook service.
+
+.<a|[id="Advanced_options_screen"]
+. Select a premigration and/or postmigration playbook service from the dropdown lists.
 . Select the virtual machines on which to run the playbook services.
 . Click *Next*.
 
