--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
@@ -5,14 +5,14 @@
 
 The infrastructure migration involves the following key stages:
 
-. Ensuring that the xref:Migration_plan_prerequisites[prerequisites] are met if your migration includes the following:
+. Ensuring that the xref:Migration_plan_prerequisites[migration plan prerequisites] are met if your migration includes the following:
 
-* VMware virtual machines that have been migrated in the past
-* VMware virtual machines running RHEL or other Linux-based operating system
-* Ansible playbooks for automating tasks before or after migration
+* Source virtual machines that have been migrated in the past
+* Source virtual machines running RHEL or other Linux-based operating system
+* Ansible playbooks for automating tasks before and/or after migration
 
 . xref:Creating_a_migration_plan[Creating the migration plan]
-. xref:Running_a_migration_plan[Running the migration plan] immediately or scheduling it to run in the future.
+. xref:Running_a_migration_plan[Running the migration plan] immediately or in the future.
 +
 Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan in progress].
 
