--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -1,7 +1,7 @@
 [id='Infrastructure_migration_solution_overview']
 = Infrastructure Migration Solution overview
 
-Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware 5.5 to Red Hat Virtualization 4.2.7 (or later) or to Red Hat OpenStack Platform 13 (or later):
+Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware 5.5 to Red Hat Virtualization 4.3 (or later) or to Red Hat OpenStack Platform 13 (or later):
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization[Red Hat Virtualization] (RHV) is a virtualization platform built on Red Hat Enterprise Linux. You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
@@ -9,7 +9,7 @@ Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate virtual
 
 The actual migration process is performed in link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], a user interface for managing the infrastructure. CloudForms enables you to map your VMware resources to the target environment and to create and run a migration plan.
 
-The Infrastructure Migration Solution has 3 key phases:
+The Infrastructure Migration Solution has the following key phases:
 
 . xref:Planning_the_migration[Planning the migration]
 +
