--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_osp_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_osp_conversion_hosts.adoc
@@ -31,7 +31,10 @@ The conversion appliance for OpenStack Platform 14 may be used with OpenStack Pl
 +
 [NOTE]
 ====
-For best performance, deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. Nested virtualization is a technology preview.
+For optimal performance:
+
+* Deploy the conversion hosts on more than one hypervisor.
+* Deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. Nested virtualization is a technology preview.
 ====
 
 . Add the SSH key for `cloud-user` in CloudForms:
