--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -2,9 +2,7 @@
 [id="Preparing_the_osp_target_environment"]
 = Preparing the Red Hat OpenStack Platform environment
 
-.Prerequisite
-
-Check the software compatibility requirements in xref:Software_compatibility_requirements[].
+include::ref_Software_compatibility_requirements.adoc[]
 
 .Procedure
 
