--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
@@ -1,7 +1,11 @@
 // Module included in the following assemblies:
 // assembly_Planning_the_migration.adoc
 [id="Recommendations_for_migration"]
-= Recommendations for migration
+= Recommendations for planning a migration
+
+The following recommendations can facilitate the migration planning.
+
+.Dividing the migration
 
 * Create migration groups, so that you are not migrating all of your virtual machines at the same time. The following questions provide guidelines:
 
@@ -18,11 +22,17 @@
 ** Load balancers
 
 * Keep linked applications together, so that they migrate at the same time.
+
+.Scheduling the migration
+
 * Schedule your migration carefully, to minimize the impact on your users.
+* Prepare your users for downtime.
 * Stagger the migration schedules.
 * Move critical applications during maintenance windows.
 * Plan for redundancy.
+
+.Checking resources
+
 * Ensure that you have sufficient space for the migration. The migration process does not delete the original virtual machines.
 * Minimize the impact on your environment by creating multiple migration plans to control and throttle the migration process.
 * Perform test migrations with different xref:Changing_the_maximum_number_of_concurrent_migrations[maximum numbers of concurrent migrations per conversion host] to assess the capabilities of your environment's infrastructure.
-* Prepare your users for downtime.
