--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
@@ -1,15 +1,16 @@
-// Used in module: assembly_Preparing_the_target_environment.adoc
-[id="Software_compatibility_requirements"]
-= Checking software compatibility in the target environment
+// Module included in the following assemblies:
+// proc_Preparing_the_rhv_target_environment.adoc
+// proc_Preparing_the_osp_target_environment.adoc
+.Prerequisite
 
-Check that the software versions are compatible before you set up your target environment.
-
+* Check that you are installing compatible software versions:
++
 .Software compatability matrix
-[cols="1,2,2", options="header"]
+[cols="2,1,1", options="header"]
 |===
-|Software |IMS 1.0 |IMS 1.1
-|VMware |5.5 or later |5.5 or later
-|Red Hat Virtualization |4.2.7 (See link:https://access.redhat.com/documentation/en-us/red_hat_infrastructure_migration_solution/1.0/html/infrastructure_migration_solution_guide/[IMS Guide 1.0]) |4.2.8
-|CloudForms |4.6 |4.7
-|OpenStack Platform |N/A |13 or later
+|Software |IMS 1.0 |IMS 1.1 |IMS 1.2
+|VMware |5.5 or later |5.5 or later |5.5 or later
+|Red Hat Virtualization |4.2.7 (See link:https://access.redhat.com/documentation/en-us/red_hat_infrastructure_migration_solution/1.0/html/infrastructure_migration_solution_guide/[IMS Guide 1.0]) |4.2.8 |4.3
+|CloudForms |4.6 |4.7 |4.7.3
+|OpenStack Platform |N/A |13 or later |13 or later
 |===
