Updated migration example

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -31,21 +31,17 @@ What impact will the migration have on my users?::
 * Check whether users will lose access to critical applications.
 
 How long will the migration take?::
-* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis.
+* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis. A xref:Migration_example[Red Hat Virtualization migration example] is provided as a guide.
 * It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
 
 [id="Migration_example"]
-.Migration example
+.Red Hat Virtualization migration example
 
-This xref:Migration_example[migration example], which took 1 hour and 30 minutes to complete, is provided as a guide:
-
-* Infrastructure:
-
-** 10 virtual machines (100 GB RAM)
-** Virtual machine disks 2/3 full (total of 1 TB of data)
-
+* Duration of migration: 1:15:53 (HH:MM:SS)
+* 10 virtual machines (100 GB RAM, 1000 GB storage)
+* Total data migrated, using VDDK: 1000 GB
+* Utilization: 66%
 * Hardware:
-
 ** Strong host (40 cores, 500 GB RAM)
 ** Fast SSD XtremIO storage
 ** Fibre Channel 8 interface for host-to-storage connection
