--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
@@ -3,19 +3,32 @@
 [id="Creating_and_configuring_the_conversion_hosts"]
 = Creating and configuring the conversion hosts
 
-The migration is performed by software installed on the conversion hosts. Creating and configuring the conversion hosts involves the following key steps:
+A _conversion host_ is a Red Hat Virtualization host or an OpenStack Platform instance created from a conversion host appliance. The migration is performed by software installed on the conversion hosts.
 
-. Ensuring that the xref:Conversion_host_prerequisites[prerequisites] are met.
+Creating and configuring the conversion hosts involves the following key steps:
+
 . OpenStack Platform only: xref:Creating_OSP_conversion_hosts[Creating the OpenStack Platform conversion hosts]
 . xref:Configuring_conversion_hosts_for_transformation[Configuring the conversion hosts for VDDK or SSH transformation]
-. Red Hat Virtualization only: xref:Authenticating_rhv_conversion_hosts_in_cloudforms[Authenticating the Red Hat Virtualization conversion hosts in CloudForms]
+. Red Hat Virtualization only: xref:Authenticating_rhv_conversion_hosts_in_cloudforms[Authenticating the Red Hat Virtualization conversion hosts]
 . Validating the xref:Verifying_conversion_hosts[conversion hosts]
 
-You can xref:Upgrading_conversion_hosts[upgrade the conversion hosts] if you upgrade your target environment.
+[NOTE]
+====
+If you upgrade your target environment, upgrade the conversion hosts:
+
+* Red Hat Virtualization: Enter the following commands on the Manager machine:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# yum update
+# cp /usr/share/ansible/roles/oVirt.v2v-conversion-host/files/virt-v2v-wrapper.py /usr/bin/
+----
+
+* OpenStack Platform: Download the latest conversion appliance and create new conversion hosts.
+====
 
 include::con_Conversion_host_prerequisites.adoc[leveloffset=+1]
 include::proc_Creating_osp_conversion_hosts.adoc[leveloffset=+1]
 include::proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
 include::proc_Authenticating_rhv_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
 include::proc_Verifying_conversion_hosts.adoc[leveloffset=+1]
-include::proc_Upgrading_conversion_hosts.adoc[leveloffset=+1]
