--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
@@ -6,11 +6,11 @@
 * Check that you are installing compatible software versions:
 +
 .Software compatability matrix
-[cols="2,1,1", options="header"]
+[cols="2,1,1,1", options="header"]
 |===
-|Software |IMS 1.0 |IMS 1.1 |IMS 1.2
+|Software |link:https://access.redhat.com/documentation/en-us/red_hat_infrastructure_migration_solution/1.0/html/infrastructure_migration_solution_guide/[IMS 1.0] |link:https://access.redhat.com/documentation/en-us/red_hat_infrastructure_migration_solution/1.1/html/infrastructure_migration_solution_guide/[IMS 1.1] |IMS 1.2
 |VMware |5.5 or later |5.5 or later |5.5 or later
-|Red Hat Virtualization |4.2.7 (See link:https://access.redhat.com/documentation/en-us/red_hat_infrastructure_migration_solution/1.0/html/infrastructure_migration_solution_guide/[IMS Guide 1.0]) |4.2.8 |4.3
+|Red Hat Virtualization |4.2.7 |4.2.8 |4.3
 |CloudForms |4.6 |4.7 |4.7.3
 |OpenStack Platform |N/A |13 or later |13 or later
 |===
