Updated logs and error messages

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
@@ -3,7 +3,7 @@
 [id="Creating_and_configuring_the_conversion_hosts"]
 = Creating and configuring the conversion hosts
 
-A _conversion host_ is a Red Hat Virtualization host or an OpenStack Platform instance created from a conversion host appliance. The migration is performed by software installed on the conversion hosts.
+A _conversion host_ can be a Red Hat Virtualization host or an OpenStack Platform instance created from a conversion host appliance. `virt-v2v` and `virt-v2v-wrapper`, running on the conversion host, perform the migration process.
 
 Creating and configuring the conversion hosts involves the following key steps:
 
